# conjecscore

./: .dockerignore  .gitignore  :q  Dockerfile  Makefile  README.md  compose.yaml  compose.yml  cw.db  eslint.config.mts  justfile  main.py  mock_data.py  package.json  pyproject.toml  tailwind.config.js  test.db  tsconfig.json  webpack.config.js
.github/workflows/: ci.yml  deploy.yml  makefile.yml
app/: db.py  dependencies.py  main.py  schemas.py  test_main.py  users.py
app/routers/: problems.py
docker/: Dockerfile
docs/source/: api.rst  conf.py  example.rst  index.rst  overview.rst  running.rst
nginx/: Dockerfile  conjecscore.org.conf
static/: brocard.ts  cdn-modules.d.ts  collatz.ts  conway99.ts  eulerbrick.ts  filled.ts  golomb.ts  haddet.ts  intercalate.ts  login.ts  magicsos.ts  nothree.ts  output.css  pointdist.ts  problem.ts  register.ts  squarepairsum.ts  taxicab.ts  tw.css  utils.ts  vlasii.ts
static/scores/: brocard.ts  (+15 more)
templates/: brocard.j2  collatz.j2  common_header.j2  conway99.html  conway99.j2  data.html  eulerbrick.j2  filled-determinant.j2  golden-rulers.j2  golomb-ruler.j2  hadamard-determinant.j2  index.html  index.j2  intercalate.j2  leaderboard.j2  leaders.j2  login.j2  magic-square-of-squares.j2  make-problem.j2  menubar.j2  minmax-point-distance-squared.j2  newaccount.j2  notfound.j2  nothree.j2  problem-card.j2  problem-libraries.j2  problem_template.j2  problems.html  problems.j2  profile.j2  register.j2  score-card.j2  square-pair-sum.j2  submission-form.j2  taxicab.j2  users.j2  vlasii-determinant.j2
tests/: Dockerfile
(+49 files in other folders)
